@@ -1,13 +1,16 @@
 #----------------------------------------------------------------------------
 #       GNU Makefile
 #
-# @file Makefile
+# @file Makefile.Portable_Interceptors_Service_Context_Manipulation_Collocated
 #
 # $Id$
 #
+# This file was automatically generated by MPC.  Any changes made directly to
+# this file will be lost the next time it is generated.
+#
 #----------------------------------------------------------------------------
-MAKEFILE        = Makefile
-BIN_UNCHECKED   = collocated
+MAKEFILE         = Makefile
+BIN_UNCHECKED    = collocated
 
 ifndef TAO_ROOT
   TAO_ROOT = $(ACE_ROOT)/TAO
@@ -16,7 +19,7 @@ ifndef CIAO_ROOT
   CIAO_ROOT = $(TAO_ROOT)/CIAO
 endif
 
-TAO_IDL = $TAO_ROOT/TAO_IDL/tao_idl
+TAO_IDL = ../../../../../bin/tao_idl
 IDL_FILES = test
 IDL_SRC = $(foreach ext, C.cpp S.cpp, $(foreach file, $(IDL_FILES), $(file)$(ext)))
 
@@ -33,11 +36,30 @@ FILES = \
 #----------------------------------------------------------------------------
 #       Include macros and targets
 #----------------------------------------------------------------------------
-LDLIBS  = -lTAO_PortableServer -lTAO_IORInterceptor -lTAO_Valuetype -lTAO_ObjRefTemplate -lTAO -lACE
+LDLIBS = -lTAO_PortableServer -lTAO_IORInterceptor -lTAO_ObjRefTemplate -lTAO_Valuetype -lTAO -lACE
 include $(ACE_ROOT)/include/makeinclude/wrapper_macros.GNU
 ## We don't need the ACELIB setting from wrapper_macros.GNU
 ACELIB =
 include $(TAO_ROOT)/rules.tao.GNU
+
+# To build multiple executables in the same directory on AIX, it works
+# best to have a template directory per project.
+# The compiler/linker isn't too smart about instantiating templates...
+ifdef TEMPINCDIR
+TEMPINCDIR := $(TEMPINCDIR)/Portable_Interceptors_Service_Context_Manipulation_Collocated
+
+all: $(TEMPINCDIR)
+
+$(TEMPINCDIR):
+	@-test -d $(TEMPINCDIR) || mkdir -p $(TEMPINCDIR) $(ACE_NUL_STDERR)
+
+endif
+OUTPUT_DIRECTORY = .
+all: $(OUTPUT_DIRECTORY)
+
+$(OUTPUT_DIRECTORY):
+	-@mkdir -p "$(OUTPUT_DIRECTORY)"
+
 
 ifeq ($(interceptors),1)
 BIN    = $(BIN_UNCHECKED)
@@ -47,10 +69,17 @@ endif
 
 OBJS   = $(addsuffix .o, $(notdir $(FILES)))
 SRC    = $(addsuffix .cpp, $(FILES))
+ifneq (,$(RC))
+  FILES += $(RESOURCES)
+endif
+
 
 ifneq ($(BIN),)
 all: idl_stubs
-testC.cpp testS.cpp test_i.cpp Collocated_ORBInitializer.cpp interceptors.cpp Client_Task.cpp Server_Task.cpp Collocated_Test.cpp: idl_stubs
+
+# This rule forces make to run the idl_stubs
+# target before building any of the source files.
+FORCED_IDL_STUBS = testC.cpp testS.cpp test_i.cpp Collocated_ORBInitializer.cpp interceptors.cpp Client_Task.cpp Server_Task.cpp Collocated_Test.cpp
 endif
 
 include $(ACE_ROOT)/include/makeinclude/macros.GNU
@@ -60,7 +89,7 @@ include $(ACE_ROOT)/include/makeinclude/rules.nonested.GNU
 include $(ACE_ROOT)/include/makeinclude/rules.local.GNU
 include $(TAO_ROOT)/taoconfig.mk
 
-CPPFLAGS     += -I$(ACE_ROOT) -I$(TAO_ROOT)/tao -I$(TAO_ROOT)
+CPPFLAGS     += -I../../../.. -I../../../../tao -I../../../../..
 ifeq ($(static_libs),1)
   ifneq ($(LIB),)
     CPPFLAGS += -DTAO_AS_STATIC_LIBS -DTAO_AS_STATIC_LIBS -DACE_AS_STATIC_LIBS
@@ -70,7 +99,7 @@ endif
 
 LDFLAGS      += -L../../../../../ace,../../../../tao,../../../../tao/PortableServer,../../../../tao/Valuetype,../../../../tao/ObjRefTemplate,../../../../tao/IORInterceptor -L../../../../../lib
 
-TAO_IDLFLAGS += -Gv -Ge 1 -Sc -Wb,pre_include=ace/pre.h -Wb,post_include=ace/post.h
+TAO_IDLFLAGS += -Gv -I../../../.. -I../../../../tao -Ge 1 -Sc -Wb,pre_include=ace/pre.h -Wb,post_include=ace/post.h
 #----------------------------------------------------------------------------
 #       Local targets
 #----------------------------------------------------------------------------
@@ -78,21 +107,26 @@ require_warning:
 	@echo This project will not be built due to one of the following missing features:
 	@echo interceptors
 
-../../../../../lib:
-	-@mkdir -p "../../../../../lib"
 
-
-ADDITIONAL_IDL_TARGETS =
 # IDL File Directory: .
 
 ifneq ($(ADDITIONAL_IDL_TARGETS),)
 idl_stubs: $(ADDITIONAL_IDL_TARGETS)
 endif
 
+ifneq ($(FORCED_IDL_STUBS),)
+$(FORCED_IDL_STUBS): idl_stubs
+endif
+
 .PRECIOUS: $(foreach ext, $(IDL_EXT), $(foreach file, $(IDL_FILES), $(file)$(ext)))
 
+ifndef kylix
 $(BIN): $(addprefix $(VDIR), $(OBJS))
 	$(LINK.cc) $(LDFLAGS) $(CC_OUTPUT_FLAG) $@ $^ $(VLDLIBS) $(POSTLINK)
+else
+$(BIN): $(addprefix $(VDIR), $(OBJS))
+	$(LINK.cc) $(LDFLAGS) $(CC_OUTPUT_FLAG) $(VLDLIBS) $(BORINITEXEOBJ) $(POSTLINK) $^, $@,,
+endif
 
 realclean: clean 
 	-$(RM) $(foreach ext, $(IDL_EXT), $(foreach file, $(IDL_FILES), $(file)$(ext)))
